// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage <= (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &lt;
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c3"
  >
    4
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage > (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage <= total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &lt;
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c3"
  >
    2
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage > total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in actualPage value 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value -20 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value String 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &lt;
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c2"
  >
    ...
  </div>
  <div
    className="c2"
  >
    ...
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      99
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      100
    </span>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with error, currentPage too big 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &lt;
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with error, perPage < 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with total < perPage && (currentPage > 1)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 1 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    1
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      4
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      5
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      6
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      7
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      8
    </span>
  </div>
  <div
    className="c3"
  >
    ...
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      99
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      onClick={[Function]}
    >
      100
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &gt;
    </span>
  </div>
</div>
`;

exports[`Paginator renders correctly 2 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 3 - big numbers 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  cursor: pointer;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &lt;
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c2"
  >
    ...
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      407
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      408
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      409
    </span>
  </div>
  <div
    className="c3"
  >
    410
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      411
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      412
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      413
    </span>
  </div>
  <div
    className="c2"
  >
    ...
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      459
    </span>
  </div>
  <div
    className="c2"
  >
    <span
      onClick={[Function]}
    >
      460
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "color": "#C8C9CA",
          "cursor": "pointer",
          "fontSize": "16px",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "22px",
        }
      }
    >
      &gt;
    </span>
  </div>
</div>
`;
